# cineAI

./: .gitignore  README.md  db.py  demo.py  hello.py  main.py  merge_all.py  movie_review_data_final.py  pyproject.toml  recommendaition_system.py  review_sentiment_analysis.py  text_processing.py
