[project]
name = "cineai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "h5py>=3.12.1",
    "imdbpy>=2022.7.9",
    "jupyterlab>=4.3.4",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pygwalker>=0.4.9.13",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.3",
    "swifter>=1.4.0",
    "textblob>=0.18.0.post0",
    "tqdm>=4.67.1",
    "transformers>=4.47.1",
    "typing-extensions>=4.12.2",
    "wheel>=0.45.1",
    "wikipedia>=1.4.0",
    "wordcloud>=1.9.4",
]
